2006-07-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-setTypingAttributes:): Make sure to keep
	the main parts of the old attributes, if they are not provided by
	the new ones.

2006-07-18 23:11-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Added category on NSView and 
	_fixSubviews method to correct window and superview after 
	loading the nib file. The _fixSubviews method is called in 
	nibInstantiate.
	* Source/GSNibTemplates.m: More helpful error message for when 
	decoding fails due to the user attempting to load a version of
	GSNibContainer that the container doesn't know about in initWithCoder:

2006-07-17 Enrico Sersale <enrico@fibernet.ro>
	
  * Headers/AppKit/NSHelpManager.h: 
  * Source/NSHelpManager.m:
  added -setContextHelp:forObject: as specified in Apple docs;
  -setContextHelp:withObject: deprecated. 

2006-07-16 Enrico Sersale <enrico@fibernet.ro>
	
  * Headers/Additions/GNUstepGUI/GSHelpManagerPanel.h: added -buttonAction: 
  method.
  * Source/GSHelpManagerPanel.m: implemented -buttonAction:.
  added a button to close the panel and changed the style mask of the window 
  to NSTitledWindowMask | NSResizableWindowMask.

>>>>>>> .r23179
2006-07-15 Enrico Sersale <enrico@fibernet.ro>
	
  * Headers/AppKit/AppKit.h: added NSHelpManager.h.
  * Headers/AppKit/NSHelpManager.h: declaration for new method -pathForHelpResource:
  * Source/NSHelpManager.m: implemented -pathForHelpResource: in the NSBundle 
  category. -pathForHelpResource: looks for help files giving the priority
  to localized resources. 
  -showHelp: looks for rtfd files too.
  * Source/GSHelpManagerPanel.m: various fixes to avoid a crash when quitting
  and to resize correctly the NSTextView.

2006-07-14 01:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h:
	* Source/GSNibCompatibility.m: Added method initWithWindow:.. to 